# AAS-Data-API

./: .env.development  .env.local  .env.production  .env.test  Dockerfile  README.md  pyproject.toml  server.py
src/adapters/libs/: bcrypt.py
src/adapters/repositories/: permission_repository.py  role_repository.py  system_repository.py  user_repository.py
src/application/interfaces/: usecase.py
src/application/usecases/: create_permission.py  create_role.py  sign_in.py  sign_up.py  system_status.py  users_me.py
src/config/: app_settings.py
src/domain/: enums.py
src/domain/entities/: permission.py  role.py  sign_in.py  system.py  user.py
src/domain/interfaces/: encoders.py  repositories.py
src/infra/: compose-dev.yaml  compose-prod.yaml  compose-test.yaml
src/infra/databases/: pgdatabase.py
src/utils/: events.py  settings.py
src/web/: dependencies.py  http_helper.py
src/web/app/: asset_administration_shells.py  histories.py  permissions.py  roles.py  system.py  users.py
src/web/auth/: auth.py
tests/: stubs.py
tests/integration/: test_roles.py  test_sign_in.py  test_sign_up.py  test_system_info.py  test_users.py
tests/web/auth/: test_sign_in.py
